--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "express": "^4.14.0",
+    "mongoose": "^4.5.5",
     "prerender": "^4.0.10",
     "socket.io": "^1.4.8",
     "socketio": "^1.0.0"
